--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ venv/
 .venv/
 
 # dependencies
-/node_modules
+node_modules/
 /.pnp
 .pnp.js
 
@@ -24,3 +24,6 @@ venv/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Python cache
+__pycache__/
